--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="user-scalable=no">
-<title>project 001</title>
+<title>baaaaaaa</title>
 <script src="phonegap.js"></script>
 <script src="createjs.min.js"></script>
 <!--script src="createjs.1.0.js"></script-->
-<script src="sheep.js?19"></script>
+<script src="sheep.js?20"></script>
 </head>
 <body onload="init();" style="margin:0px; overflow:hidden; background-color: #699ac1;">
 	<canvas id="canvas" width="720" height="1280" style="position: absolute; z-index: -1; display: block; background-color: #699ac1;"></canvas>
