--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="user-scalable=no">
 <title>baaaaaaa</title>
-<script src="phonegap.js"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-116251394-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-116251394-1');
+</script>
+
 <script src="createjs.min.js"></script>
 <!--script src="createjs.1.0.js"></script-->
 <script src="sheep.js?20"></script>
